Revert "fix: Move P1 score background to show border in gap"
This reverts commits 2172824 and 389d104 which adjusted P1 score box
styling for border visibility.

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -63,7 +63,7 @@ body {
   }
 
   #p1Score {
-    left: 301px;
+    left: 295px;
   }
 
   #p2Score {
@@ -157,7 +157,6 @@ body {
 
   #p1ScoreBG {
     background-color: $p1-accent;
-    left: 2px;
     transform: skewX(20deg);
   }
 
